# ephios_submit_qualifications

./: .gitignore  README.md  pyproject.toml
ephios_submit_qualifications/: apps.py  forms.py  models.py  notifications.py  signals.py  urls.py  views.py
ephios_submit_qualifications/locale/de/LC_MESSAGES/: django.po
ephios_submit_qualifications/static/ephios_submit_qualifications/js/: qualification_request_detail.js
ephios_submit_qualifications/static/ephios_submit_qualifications/qualification_requests/css/: style.css
ephios_submit_qualifications/templates/ephios_submit_qualifications/: qualification_default_expiration_time_add_form.html  qualification_request_detail.html  qualification_requests.html  qualification_submit_form.html
ephios_submit_qualifications/templates/ephios_submit_qualifications/qualification_default_expiration_time/: details_form.html  list.html
