[tool.poetry]
name = "ephios-submit-qualifications"
version = "0.1.0"
description = "Users can submit requests to gain qualifications"
authors = ["Ben Samuelson <ben.samuelson@fiteka.de>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."ephios.plugins"]
"ephios_submit_qualifications" = "ephios_submit_qualifications.apps.PluginApp"
